--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "filepond": "^4.32.10",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.394",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-filepond": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
