--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "jspdf": "^3.0.3",
+    "lottie-react": "^2.4.1",
     "mammoth": "^1.11.0",
-    "pdfjs-dist": "^5.4.394",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^2.16.105",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-filepond": "^7.1.3"
