--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^2.16.105",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-filepond": "^7.1.3"
+    "react-filepond": "^7.1.3",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
